--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,58 @@
-:root{
-  --logoColor: #dd2521;
-  --yellow:  #ffdf00;
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&family=Rowdies&display=swap');
+
+:root {
+  --red: #dd2521;
+  --black: #332828;
+  --white: #fff;
+  --secondary: #894B4A;
+  --action: #F07775;
+  --actionHover: #c76261;
+  
+  --yellow: #ffdf00;
 }
 
 body {
   position: relative;
   min-height: 100vh;
+  font-family: 'Red Hat Display', sans-serif;
+  /*From gradientMagic.com*/
+  background-image: repeating-linear-gradient(135deg, rgba(189, 189, 189, 0.1) 0px, rgba(189, 189, 189, 0.1) 2px, transparent 2px, transparent 4px), linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
+
 }
-main{
+
+main {
   /*make space between footer & content*/
   margin-bottom: 2em;
 
 }
-h2{
+
+nav {
+  background-color: var(--secondary);
+}
+header h1{
+  font-size: 4rem;
+}
+header h2{
+  font-size: 3rem;
+}
+h1,h2{
+  font-family: 'Rowdies', sans-serif;
+}
+h2 {
   font-style: italic;
+  color: var(--red);
+}
+
+.btn-primary {
+  background-color: var(--action);
+  border: var(--action);
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
+  background-color: var(--actionHover) !important;
+  border-color: var(--actionHover);
 }
 
 #newArrivalCarousel {
@@ -24,25 +63,30 @@ h2{
 #newArrivalCarousel .carousel-inner .carousel-item img {
   max-height: 500px;
 }
+
 /*Product Section on HOME*/
 
 /*Class to apply to JS productCards*/
-.customSmallThumbnail{
-  width: 150px; 
-  height: auto; 
+.customSmallThumbnail {
+  width: 150px;
+  height: auto;
   border-radius: 12px;
 }
+
 /*Product Details On MODAL*/
-.customSmallText{
+.customSmallText {
   color: #4b4343;
   font-style: italic;
 }
-.customBorder{
+
+.customBorder {
   border-bottom: solid 2px;
 }
-.starIcon{
+
+.starIcon {
   color: var(--yellow)
 }
+
 /*Contact Page*/
 form {
   padding: 2em 1em 2em 1em;
@@ -54,12 +98,15 @@ textarea {
 }
 
 footer {
-  background-color: #dd2521;
-/*Force Bottom*/
+  background-color: var(--secondary);
+  color: #fff;
+  padding-top: 8px;
+  /*Force Bottom*/
   position: absolute;
   bottom: 0;
   width: 100%;
 }
+
 footer ul {
   list-style: none;
 }
