--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,25 @@
   }
   
 }
+@keyframes shake{
+0% { 
+    transform: rotate(5deg); 
+} 
+
+25% { 
+    transform: rotate(-8deg); 
+} 
+30%{
+  transform: rotate(-16deg);
+}
+50%{
+  transform: rotate(-8deg);
+}
+100% { 
+    transform: rotate(5deg); 
+} 
+
+}
 body {
   position: relative;
   min-height: 100vh;
@@ -64,23 +83,19 @@ h2 {
   border-color: var(--actionHover);
 }
 
-#newArrivalCarousel {
-  max-height: 500px;
-
-}
-
-#newArrivalCarousel .carousel-inner .carousel-item img {
-  max-height: 500px;
-}
-
 /*Product Section on HOME*/
-
+.addedToCartShake{
+  animation: shake .3s linear;
+}
 /*Class to apply to JS productCards*/
 .customSmallThumbnail {
   width: 150px;
   height: auto;
   border-radius: 12px;
 }
+/* .customSmallThumbnail:hover{
+  animation: shake .5s infinite;
+} */
 
 /*Product Details On MODAL*/
 .customSmallText {
