reworked homePage design & content. Increased logo size

--- a/styles.css
+++ b/styles.css
@@ -5,42 +5,48 @@
   --black: #332828;
   --white: #fff;
   --grey: #ccc;
-  --secondary: #894B4A;
-  --action: #F07775;
-  --actionHover: #c76261;
-  
+  --secondary: #333354;
+  --action: #dd2521;
+  --actionHover: #f34e4b;
+
   --yellow: #ffdf00;
 }
 
 @keyframes fadeOut {
-  0%{
+  0% {
     opacity: 1;
   }
-  100%{
+
+  100% {
     opacity: 0;
   }
-  
-}
-@keyframes shake{
-0% { 
-    transform: rotate(5deg); 
-} 
 
-20% { 
-    transform: rotate(-8deg); 
-} 
-30%{
-  transform: rotate(-16deg);
 }
-60%{
-  transform: rotate(8deg)
-}
-50%{
-  transform: rotate(16deg);
-}
-100% { 
-    transform: rotate(-5deg); 
-} 
+
+@keyframes shake {
+  0% {
+    transform: rotate(5deg);
+  }
+
+  20% {
+    transform: rotate(-8deg);
+  }
+
+  30% {
+    transform: rotate(-16deg);
+  }
+
+  60% {
+    transform: rotate(8deg)
+  }
+
+  50% {
+    transform: rotate(16deg);
+  }
+
+  100% {
+    transform: rotate(-5deg);
+  }
 }
 
 body {
@@ -52,33 +58,68 @@ body {
 
 }
 
-main {
-  /*make space between footer & content*/
-  margin-bottom: 2em;
+/*New Home Styles*/
+.homePage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
 
+.heroContainer>figure {
+/* max-width: 506px; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.actionButton {
+  background-color: var(--action);
+  color: var(--white);
+  border: none;
+  padding: 8px;
+  font-weight: bold;
+  border-radius: 8px;
+  margin-right: 1em;
+  margin-top: 1em;
+  width: 200px;
+}
+
+.actionButton:hover {
+  transition: .5s;
+  background-color: var(--actionHover);
 }
 
 nav {
   background-color: var(--secondary);
+  min-height: 80px;
 }
-header h1{
+
+header h1 {
   font-size: 4rem;
 }
-header h2{
+
+header h2 {
   font-size: 3rem;
 }
 
 @media screen and (max-width: 600px) {
-  header h1{
+  header h1 {
     font-size: 2.5rem;
   }
-  header h2{
+
+  header h2 {
     font-size: 2rem;
   }
 }
-h1,h2,h3,h4{
+
+h1,
+h2,
+h3,
+h4 {
   font-family: 'Rowdies', sans-serif;
 }
+
 h2 {
   font-style: italic;
   color: var(--red);
@@ -98,18 +139,21 @@ h2 {
 }
 
 /*Product Section on HOME*/
-.addedToCartShake{
+.addedToCartShake {
   animation: shake .5s;
 }
+
 /*Class to apply to JS productCards*/
 .customSmallThumbnail {
   width: 150px;
   height: auto;
   border-radius: 12px;
-  transition: transform .5s;;
+  transition: transform .5s;
+  ;
 }
-.customSmallThumbnail:hover{
- transform: scale(1.5); 
+
+.customSmallThumbnail:hover {
+  transform: scale(1.5);
 }
 
 /*Product Details On MODAL*/
@@ -125,14 +169,17 @@ h2 {
 .starIcon {
   color: var(--yellow)
 }
+
 /*CART PAGE*/
-.checkoutContainer{
+.checkoutContainer {
   border-right: solid 1px var(--black);
 }
-#checkoutBtn{
+
+#checkoutBtn {
   width: 50%;
 }
-.removeBtn{
+
+.removeBtn {
   background-color: transparent;
   padding: 8px;
   border: 2px solid var(--red);
@@ -140,21 +187,23 @@ h2 {
   color: var(--black);
   font-weight: bold;
 }
-.removeBtn:hover{
+
+.removeBtn:hover {
   transition: .5s;
   background-color: var(--red);
 }
 
-.cartItemRemoved{
+.cartItemRemoved {
   animation: fadeOut 0.5s ease forwards;
 }
 
-#cartSum{
+#cartSum {
   background-color: var(--secondary);
   padding: 8px;
   border-radius: 4px;
   color: var(--white);
 }
+
 /*Contact Page*/
 form {
   padding: 2em 1em 2em 1em;
@@ -174,10 +223,12 @@ footer {
   bottom: 0;
   width: 100%;
 }
-footer a{
+
+footer a {
   color: #91bccf;
 }
-footer a:hover{
+
+footer a:hover {
   color: #4b9abe;
 }
 
