--- a/styles.css
+++ b/styles.css
@@ -152,12 +152,12 @@ h2 {
   justify-content:center;
   align-items: center;
   border-bottom: 2px black solid;
+  color: var(--white);
   text-shadow: 1px 2px 3px var(--black);
 }
-.productsBanner > h1,h2{
+#productsHeader{
   color: var(--white);
 }
-
 
 /*Product Section on HOME*/
 .addedToCartShake {
