updated modal for products, changed some styles

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display&family=Rowdies&display=swap');
 
 :root {
-  --red: #dd2521;
   --black: #332828;
   --white: #fff;
   --grey: #ccc;
@@ -23,42 +22,17 @@
 
 }
 
-@keyframes shake {
-  0% {
-    transform: rotate(5deg);
-  }
-
-  20% {
-    transform: rotate(-8deg);
-  }
-
-  30% {
-    transform: rotate(-16deg);
-  }
-
-  60% {
-    transform: rotate(8deg)
-  }
-
-  50% {
-    transform: rotate(16deg);
-  }
-
-  100% {
-    transform: rotate(-5deg);
-  }
-}
-
 body {
   position: relative;
   min-height: 100vh;
+  overflow-x: hidden;
   font-family: 'Red Hat Display', sans-serif;
   /*From gradientMagic.com*/
   background-image: repeating-linear-gradient(135deg, rgba(189, 189, 189, 0.1) 0px, rgba(189, 189, 189, 0.1) 2px, transparent 2px, transparent 4px), linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
 
 }
 
-/*New Home Styles*/
+/*Home Styles*/
 .homePage {
   display: flex;
   flex-direction: column;
@@ -91,7 +65,7 @@ body {
   transition: .5s;
   background-color: var(--actionHover);
 }
-
+/*Nav Styles*/
 nav {
   background-color: var(--secondary);
   min-height: 80px;
@@ -114,7 +88,7 @@ header h2 {
     font-size: 2rem;
   }
 }
-
+/*Page Headers*/
 h1,
 h2,
 h3,
@@ -124,9 +98,9 @@ h4 {
 
 h2 {
   font-style: italic;
-  color: var(--red);
+  color: var(--action);
 }
-
+/*Buttons*/
 .btn-primary {
   background-color: var(--action);
   border: var(--action);
@@ -142,8 +116,7 @@ h2 {
 /*PRODUCTS PAGE*/
 .productsBanner{
   background-image: url(/images/banner.jpg);
- height: 30vh;
-  width: 100%;
+  height: 30vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -155,14 +128,12 @@ h2 {
   color: var(--white);
   text-shadow: 1px 2px 3px var(--black);
 }
+
+/*Product Section */
 #productsHeader{
   color: var(--white);
 }
 
-/*Product Section on HOME*/
-.addedToCartShake {
-  animation: shake .5s;
-}
 
 /*Class to apply to JS productCards*/
 .customSmallThumbnail {
@@ -170,7 +141,7 @@ h2 {
   height: auto;
   border-radius: 12px;
   transition: transform .5s;
-  ;
+  
 }
 
 .customSmallThumbnail:hover {
@@ -178,6 +149,7 @@ h2 {
 }
 
 /*Product Details On MODAL*/
+
 .customSmallText {
   color: #4b4343;
   font-style: italic;
@@ -203,15 +175,15 @@ h2 {
 .removeBtn {
   background-color: transparent;
   padding: 8px;
-  border: 2px solid var(--red);
-  border-radius: 4px;
+  border: 2px solid var(--action);
+  border-radius: 8px;
   color: var(--black);
   font-weight: bold;
 }
 
 .removeBtn:hover {
   transition: .5s;
-  background-color: var(--red);
+  background-color: var(--action);
 }
 
 .cartItemRemoved {
@@ -255,12 +227,15 @@ footer {
   width: 100%;
 }
 
+/*Footer*/
+
 footer a {
-  color: #91bccf;
+  color: var(--action);
 }
 
 footer a:hover {
-  color: #4b9abe;
+  transition: .5s;
+  color: var(--actionHover);
 }
 
 footer ul {
